# mymonorepo

./: .gitignore  .gitmodules  GEMINI.md  bug_comment_draft.txt  comment_bug.py  draft_interview_proposal.txt  fix_gemini.py  send_dm_script.py
.gemini/: settings.json
.scratch_space/: 0d8db3bf-16ae-41ea-a2b5-85a3d57161b6_task.md  b_484405237_analysis.md  bug_comment.txt  buganizer_review_task.md  doc_blob.md  fix_lint.py  fix_lint2.py  gen_doc.py  gen_doc_urls.py  gen_investigate.py  gen_pr_urls.py  gen_url.py  gen_urls2.py  gen_urls3.py  gen_urls4.py  merge_gemini.py  patch_backend.py  patch_base.py  patch_bq.py  patch_bq_status.py  patch_gemini_cli.py  patch_gemini_cli_2.py  patch_models.py  patch_orchestrator.py  patch_runbrowser.py  patch_runsummary.py  patch_test_bq.py  payload.txt  post_comments.sh  post_comments_seq.sh  post_step2.sh  pr_comment.py  pr_comment2.py  pr_comment3.py  send_dm_script.py  step2_plan.md  step3_plan.md  step4_plan.md  update_bug.py  (+3 more)
projects/gv_case_study/submission/source/xgboost/: Makefile  setup.cfg
projects/gv_case_study/submission/source/xgboost/configs/: base.yaml
projects/gv_case_study/submission/source/xgboost/notebooks/: GV_Exercise.ipynb  data_analysis.ipynb
projects/gv_case_study/submission/source/xgboost/src/common/: __init__.py  config.py  logging.py
projects/gv_case_study/submission/source/xgboost/src/features/: feature_factory.py  types.py
projects/gv_case_study/submission/source/xgboost/src/predict/: inference.py
projects/gv_case_study/submission/source/xgboost/tests/features/: test_pipeline_xgboost_process.py
(+492 files in other folders)
