[metadata]
name = gv-case-study
version = 0.1.0
description = Modular ML ranking pipeline for GV case study
long_description = file: README.md
long_description_content_type = text/markdown
author = Gehirn Ventures
license = MIT

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy>=1.24
    pandas>=2.0
    pandera>=0.18
    PyYAML>=6.0
    shap>=0.44
    pyarrow>=14.0
    xgboost>=2.0
    mlflow>=2.0
    matplotlib>=3.7
    seaborn>=0.12

[options.packages.find]
where = src

[options.extras_require]
dev =
    factory-boy>=3.3
    pytest>=7.4
    pytest-cov>=4.1
    ruff>=0.2
